parser/src/test/resources/corpus/valid/35_when_then.ff
rule "When Then" {
  when fee > USD 0 then post fee to ledger account "Performance Fee"
}
