parser/src/test/resources/corpus/invalid/34_when_missing_then.ff
rule "When Missing Then" {
  when fee > USD 0 publish fee
}
